Fix java 11 illegal reflective access warnings