@@ -341,6 +341,11 @@ bootWar {
     from("templates") {
         into("templates")
     }
+    manifest {
+        attributes(
+            ['Add-Opens':'java.management/com.sun.jmx.mbeanserver java.base/java.io java.base/java.lang java.base/java.lang.invoke java.base/java.lang.reflect java.base/java.math java.base/java.net java.base/java.nio.charset java.base/java.nio.file java.base/java.security java.base/java.text java.base/java.time java.base/java.util java.base/java.util.concurrent java.base/java.util.function java.base/java.util.regex java.base/javax.crypto java.base/sun.nio.cs']
+        )
+    }
 }
 
 artifacts {
